@@ -60,7 +60,7 @@ static int checkForValidArchitectures(Spec spec);
 static int isMemberInEntry(Header header, char *name, int tag);
 static int readIcon(Header h, char *file);
     
-int parsePreamble(Spec spec, int initialPackage, int anyarch)
+int parsePreamble(Spec spec, int initialPackage)
 {
     int nextPart;
     int tag, rc;
@@ -139,8 +139,8 @@ int parsePreamble(Spec spec, int initialPackage, int anyarch)
 	return RPMERR_BADSPEC;
     }
 
-    /* XXX Skip valid arch check if only doing -bs processing */
-    if (!anyarch && checkForValidArchitectures(spec)) {
+    /* XXX Skip valid arch check if not building binary package */
+    if (!spec->anyarch && checkForValidArchitectures(spec)) {
 	    return RPMERR_BADSPEC;
     }
 
