@@ -67,6 +67,9 @@ struct SpecStruct {
     char ** buildArchitectures;
     int buildArchitectureCount;
     int inBuildArchitectures;
+
+    int force;
+    int anyarch;
     
     int gotBuildRoot;
     char *buildRoot;
